Added Navigation btn / with the first-title finished header

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $color-primary-light: #dd1b38;
 $color-primary-dark: #970e22;
 
 $color-secondary: #0861D7;
-$color-secondary-light: #0e70f0;
+$color-secondary-light: #1084f0;
 $color-secondary-dark: #0750af;
 
 $color-grey-light-1: #f7f7f7;
