--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(5rem); }
+    transform: translateY(50rem); }
   100% {
     opacity: 1;
     transform: translateY(0); } }
@@ -114,7 +114,7 @@ body {
     animation: moveInRight 1s ease-out; }
     @media only screen and (max-width: 37.5em) {
       .heading-primary--sub {
-        letter-spacing: .5rem; } }
+        letter-spacing: 0.5rem; } }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -125,16 +125,14 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 2px;
-  transition: all .2s; }
+  transition: all 0.2s;
+  text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.4); }
   @media only screen and (max-width: 56.25em) {
     .heading-secondary {
       font-size: 3rem; } }
   @media only screen and (max-width: 37.5em) {
     .heading-secondary {
       font-size: 2.5rem; } }
-  .heading-secondary:hover {
-    transform: skewY(2deg) skewX(15deg) scale(1.1);
-    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.4); }
 
 .heading-tertiary {
   font-size: 1.6rem;
@@ -170,7 +168,7 @@ body {
 .u-margin-top-huge {
   margin-top: 10rem !important; }
 
-.parallax {
+header .parallax {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -178,41 +176,176 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; }
-  .parallax picture {
+  header .parallax picture {
     position: absolute;
     top: 0;
     left: 0;
     object-fit: cover;
     pointer-events: none;
-    transition: all .2s; }
-    .parallax picture img {
+    transition: all 0.2s; }
+    header .parallax picture img {
       width: 100%;
       height: 100vh; }
-    .parallax picture.sun {
+    header .parallax picture.sun {
       left: -250px;
       top: -50px; }
-      .parallax picture.sun img {
+      header .parallax picture.sun img {
         height: 100%; }
-    .parallax picture.hill {
+    header .parallax picture.hill {
       top: 200px;
       animation-name: fadeIn;
       animation-duration: 1s;
       animation-timing-function: ease; }
-    .parallax picture.logo {
+    header .parallax picture.logo {
       top: 25%;
       left: 50%;
       transform: translate(-50%, -50%);
       animation-name: fadeIn;
       animation-duration: 2s;
       animation-timing-function: ease-in; }
-      .parallax picture.logo img {
+      header .parallax picture.logo img {
         height: 100%; }
-    .parallax picture.main {
+    header .parallax picture.main {
       z-index: 2;
       top: 100px;
       animation-name: fadeIn;
       animation-duration: 2s;
       animation-timing-function: ease; }
 
-h1 {
-  height: 100vh; }
+header h1 {
+  height: 100vh;
+  opacity: 0; }
+  header h1.move-in {
+    opacity: 1;
+    animation-name: moveInBottom;
+    animation-duration: 1.5s;
+    animation-timing-function: ease; }
+
+.navigation__checkbox {
+  display: none; }
+
+.navigation__button {
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer; }
+  @media only screen and (max-width: 56.25em) {
+    .navigation__button {
+      top: 4rem;
+      right: 4rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .navigation__button {
+      top: 3.5rem;
+      right: 3.5rem; } }
+
+.navigation__background {
+  height: 6rem;
+  width: 3.3rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(#1084f0, #0750af);
+  z-index: 1000;
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  @media only screen and (max-width: 56.25em) {
+    .navigation__background {
+      top: 4.5rem;
+      right: 4.5rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .navigation__background {
+      top: 4rem;
+      right: 4rem; } }
+
+.navigation__nav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1500;
+  opacity: 0;
+  width: 0;
+  visibility: hidden;
+  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+  width: 100%; }
+
+.navigation__item {
+  margin: 1rem; }
+
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 3rem;
+  font-weight: 300;
+  padding: 1rem 2rem;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #B82036 50%);
+  background-size: 220%;
+  transition: all 0.4s; }
+  .navigation__link:link span, .navigation__link:visited span {
+    margin-right: 1.5rem;
+    display: inline-block; }
+
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #fff;
+  transform: translateX(1rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%;
+  visibility: visible; }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 3.5rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3.5rem;
+    height: 2.5px;
+    background-color: #dd1b38;
+    display: inline-block; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    transition: all 0.2s; }
+  .navigation__icon::before {
+    top: -0.8rem; }
+  .navigation__icon::after {
+    top: 0.8rem; }
+
+.navigation__button:hover .navigation__icon::before {
+  top: -1.25rem; }
+
+.navigation__button:hover .navigation__icon::after {
+  top: 1.25rem; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  top: 0;
+  transform: rotate(135deg); }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  top: 0;
+  transform: rotate(-135deg); }
