--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,63 +1,73 @@
-.parallax {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+header {
+  .parallax {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  picture {
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    pointer-events: none;
-    transition: all .2s;
-
-    img {
-      width: 100%;
-      height: 100vh;
-    }
-
-    &.sun {
-      left: -250px;
-      top: -50px;
-      img {
-        height: 100%;
-      }
-    }
-
-    &.hill {
-      top: 200px;
-      animation-name: fadeIn;
-      animation-duration: 1s;
-      animation-timing-function: ease;
-    }
-
-    &.logo {
-      top: 25%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      animation-name: fadeIn;
-      animation-duration: 2s;
-      animation-timing-function: ease-in;
+    picture {
+      position: absolute;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+      pointer-events: none;
+      transition: all 0.2s;
 
       img {
-        height: 100%;
+        width: 100%;
+        height: 100vh;
+      }
+
+      &.sun {
+        left: -250px;
+        top: -50px;
+        img {
+          height: 100%;
+        }
+      }
+
+      &.hill {
+        top: 200px;
+        animation-name: fadeIn;
+        animation-duration: 1s;
+        animation-timing-function: ease;
+      }
+
+      &.logo {
+        top: 25%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        animation-name: fadeIn;
+        animation-duration: 2s;
+        animation-timing-function: ease-in;
+
+        img {
+          height: 100%;
+        }
+      }
+
+      &.main {
+        z-index: 2;
+        top: 100px;
+        animation-name: fadeIn;
+        animation-duration: 2s;
+        animation-timing-function: ease;
       }
     }
+  }
 
-    &.main {
-      z-index: 2;
-      top: 100px;
-      animation-name: fadeIn;
-      animation-duration: 2s;
+  h1 {
+    height: 100vh;
+    opacity: 0;
+
+    &.move-in {
+      opacity: 1;
+      animation-name: moveInBottom;
+      animation-duration: 1.5s;
       animation-timing-function: ease;
     }
   }
-}
-
-h1 {
-  height: 100vh;
 }
