added the Intro section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,9 @@
 
 @import "layout/header";
 @import "layout/navigation";
+@import "layout/intro";
 
-@import "pages/index.scss"
+@import "pages/index.scss";
+
+@import "components/button";
 
