--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ header .parallax {
       animation-timing-function: ease; }
 
 header h1 {
-  height: 100vh;
+  padding: 2rem;
   opacity: 0; }
   header h1.move-in {
     opacity: 1;
@@ -349,3 +349,99 @@ header h1 {
 .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
   top: 0;
   transform: rotate(-135deg); }
+
+.intro {
+  padding: 20rem; }
+  .intro h1 {
+    padding-bottom: 5rem;
+    font-size: 2.5rem;
+    color: #777; }
+  .intro .with-img {
+    display: flex; }
+    .intro .with-img .text {
+      padding-right: 10rem;
+      width: 45vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .intro .with-img .text p {
+        font-size: 1.6rem; }
+      .intro .with-img .text .btn {
+        margin-top: 5rem; }
+    .intro .with-img .img {
+      width: 18vw; }
+      .intro .with-img .img .intro-img {
+        width: 100%; }
+
+.btn, .btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all .2s;
+  position: relative;
+  font-size: 1.6rem;
+  background-color: #0861D7;
+  color: #fff;
+  border: none;
+  cursor: pointer; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
+.btn:active, .btn:focus {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2); }
+
+.btn--white {
+  background-color: #fff;
+  color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
+
+.btn--green {
+  background-color: #B82036;
+  color: #fff; }
+  .btn--green::after {
+    background-color: #B82036; }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--animated {
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #B82036;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #970e22;
+  padding: 3px;
+  transition: all .2s; }
+
+.btn-text:hover {
+  background-color: #B82036;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25);
+  transform: translateY(-4px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
