--- a/scss/layout/_old.scss
+++ b/scss/layout/_old.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20rem 0;
+  margin: 20rem 0 0;
   min-height: 90vh;
   .img-container {
   }
