finished the products section interface without modals

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $color-primary: #B82036;
 $color-primary-light: #dd1b38;
 $color-primary-dark: #970e22;
+$color-primary-transparent: #b8203731;
 
 $color-secondary: #0861D7;
 $color-secondary-light: #1084f0;
