--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ header h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20rem 0 0;
+  margin: 20rem 0 10rem;
   min-height: 90vh; }
   .col-2 .text-container {
     max-width: 60rem;
@@ -557,7 +557,45 @@ header h1 {
 .section-products {
   display: flex;
   flex-direction: column; }
+  .section-products h1 {
+    margin-bottom: 10rem; }
   .section-products .products {
     display: flex;
     justify-content: center;
-    align-items: center; }
+    flex-wrap: wrap; }
+    .section-products .products picture {
+      position: relative;
+      margin: 7rem 5rem; }
+      .section-products .products picture::before {
+        position: absolute;
+        right: 20rem;
+        top: -6rem;
+        font-size: 3.5rem;
+        width: fit-content; }
+      .section-products .products picture:hover::after {
+        content: "+info";
+        position: absolute;
+        top: 30%;
+        left: 30%;
+        font-size: 4rem;
+        padding: 1rem;
+        color: #0861D7;
+        background-color: rgba(255, 255, 255, 0.678);
+        border-radius: 50%; }
+      .section-products .products picture:hover .product {
+        filter: blur(8px) brightness(100%);
+        transform: scale(0.9); }
+      .section-products .products picture .product {
+        width: 35rem;
+        height: 25rem;
+        transition: all 0.5s; }
+      .section-products .products picture.queso::before {
+        content: "Queso Fresco"; }
+      .section-products .products picture.leche::before {
+        content: "Leche Pura"; }
+      .section-products .products picture.mantequilla::before {
+        content: "Mantequilla"; }
+      .section-products .products picture.requeson::before {
+        content: "Requeson"; }
+      .section-products .products picture.nata::before {
+        content: "Nata"; }
