--- a/scss/components/_products.scss
+++ b/scss/components/_products.scss
@@ -1,12 +1,72 @@
-.section-products{
-    display: flex;
-    flex-direction: column;
+.section-products {
+  display: flex;
+  flex-direction: column;
 
-    & .products{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        
+  h1 {
+    margin-bottom: 10rem;
+  }
+
+  & .products {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    & picture {
+      position: relative;
+      margin: 7rem 5rem;
+
+      &::before {
+        position: absolute;
+        right: 20rem;
+        top: -6rem;
+        font-size: 3.5rem;
+        width: fit-content;
+      }
+
+      &:hover {
+        &::after {
+          content: "+info";
+          position: absolute;
+          top: 30%;
+          left: 30%;
+          font-size: 4rem;
+          padding: 1rem;
+          color: $color-secondary;
+          background-color: rgba(255, 255, 255, 0.678);
+          border-radius: 50%;
+        }
+
+        & .product {
+          filter: blur(8px) brightness(100%);
+          transform: scale(0.9);
+        }
+      }
+
+      & .product {
+        width: 35rem;
+        height: 25rem;
+        transition: all 0.5s;
+      }
+
+      &.queso::before {
+        content: "Queso Fresco";
+      }
+
+      &.leche::before {
+        content: "Leche Pura";
+      }
+
+      &.mantequilla::before {
+        content: "Mantequilla";
+      }
+
+      &.requeson::before {
+        content: "Requeson";
+      }
+
+      &.nata::before {
+        content: "Nata";
+      }
     }
+  }
 }
