--- a/scss/layout/_old.scss
+++ b/scss/layout/_old.scss
@@ -2,10 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20rem 0 0;
+  margin: 20rem 0 10rem;
   min-height: 90vh;
-  .img-container {
-  }
+  
 
   .text-container{
       max-width: 60rem;
