--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $color-primary-transparent: #b8203731;
 $color-secondary: #0861D7;
 $color-secondary-light: #1084f0;
 $color-secondary-dark: #0750af;
+$color-secondary-transparent: #0862d785;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
