--- a/scss/components/_products.scss
+++ b/scss/components/_products.scss
@@ -14,6 +14,7 @@
     & picture {
       position: relative;
       margin: 7rem 5rem;
+      cursor: pointer;
 
       &::before {
         position: absolute;
