--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ header h1 {
   padding: 1.5rem 4rem;
   display: inline-block;
   border-radius: 10rem;
-  transition: all .2s;
+  transition: all 0.2s;
   position: relative;
   font-size: 1.6rem;
   background-color: #0861D7;
@@ -431,10 +431,10 @@ header h1 {
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all .4s; }
+  transition: all 0.4s; }
 
 .btn--animated {
-  animation: moveInBottom .5s ease-out .75s;
+  animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; }
 
 .btn-text:link, .btn-text:visited {
@@ -444,7 +444,7 @@ header h1 {
   text-decoration: none;
   border-bottom: 1px solid #970e22;
   padding: 3px;
-  transition: all .2s; }
+  transition: all 0.2s; }
 
 .btn-text:hover {
   background-color: #B82036;
@@ -562,7 +562,9 @@ header h1 {
   #section-products .products {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    min-height: 100vh;
+    margin-bottom: 20rem; }
     #section-products .products picture {
       position: relative;
       margin: 7rem 5rem;
@@ -637,3 +639,63 @@ footer .modal-bg {
     background-color: #0862d785;
     border-radius: 50%;
     cursor: pointer; }
+
+.section-form {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #1084f0, #0750af); }
+  @media only screen and (max-width: 56.25em) {
+    .section-form {
+      padding: 10rem 0; } }
+  .section-form .book {
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 50%, transparent 50%), url(../imgs/saludo.jpg);
+    background-size: 100%;
+    margin: 0 8rem;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.25); }
+    @media only screen and (max-width: 75em) {
+      .section-form .book {
+        background-size: cover; } }
+    .section-form .book__form {
+      width: 50%;
+      padding: 6rem; }
+      @media only screen and (max-width: 75em) {
+        .section-form .book__form {
+          width: 65%; } }
+      @media only screen and (max-width: 56.25em) {
+        .section-form .book__form {
+          width: 100%; } }
+    .section-form .book .form__group:not(:last-child) {
+      margin-bottom: 2rem; }
+    .section-form .book .form__input {
+      font-size: 1.5rem;
+      font-family: inherit;
+      color: inherit;
+      padding: 1.5rem 2rem;
+      border-radius: 2px;
+      background-color: rgba(216, 148, 0, 0.1);
+      border: 1px solid;
+      display: block;
+      width: 90%;
+      transition: all 0.3s; }
+      @media only screen and (max-width: 56.25em) {
+        .section-form .book .form__input {
+          width: 100%; } }
+      .section-form .book .form__input:focus {
+        outline: none;
+        box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+        border-bottom: 3px solid #B82036; }
+      .section-form .book .form__input:focus:invalid {
+        border-bottom: 3px solid #e91717; }
+      .section-form .book .form__input::-webkit-input-placeholder {
+        color: #999; }
+    .section-form .book .form__label {
+      font-size: 1.2rem;
+      font-weight: 700;
+      margin-left: 2rem;
+      margin-top: 0.7rem;
+      display: block;
+      transition: all 0.3s; }
+    .section-form .book .form__input:placeholder-shown + .section-form .book .form__label {
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(-4rem); }
