--- a/scss/components/_products.scss
+++ b/scss/components/_products.scss
@@ -10,6 +10,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    min-height: 100vh;
+    margin-bottom: 20rem;
 
     & picture {
       position: relative;
