--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,6 +7,15 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    filter: brightness(80%);
+    
+    .sunrise{
+      background-color: rgb(255, 187, 0);
+      height: 100vh;
+      width: 100%;
+      z-index: 2;      
+      opacity: 25%;
+    }
 
     picture {
       position: absolute;
