--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,63 @@ header h1 {
     max-width: 60rem;
     padding: 0 10rem; }
 
+footer {
+  background-color: #B82036;
+  color: #fff;
+  padding: 2rem; }
+  footer .footer__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-around; }
+    footer .footer__content--quote {
+      width: 20%; }
+      footer .footer__content--quote p.tiny-text {
+        margin: 2rem 0 0 3rem; }
+    footer .footer__content--logo {
+      width: 30%;
+      fill: #fff;
+      text-align: center; }
+      footer .footer__content--logo img {
+        width: 100%; }
+    footer .footer__content--social .media {
+      justify-content: center;
+      margin-bottom: 2rem; }
+      footer .footer__content--social .media .facebook,
+      footer .footer__content--social .media .linkedin {
+        transition: all 1s; }
+      footer .footer__content--social .media .facebook:hover {
+        fill: #3b5998; }
+      footer .footer__content--social .media .linkedin:hover {
+        fill: #007bb6; }
+    footer .footer__content--social > div {
+      margin-top: 2.5rem;
+      display: flex;
+      align-items: center; }
+      footer .footer__content--social > div > svg {
+        width: 10rem;
+        fill: #970e22;
+        height: 4rem; }
+    footer .footer__content--social .mobile svg,
+    footer .footer__content--social .mail svg,
+    footer .footer__content--social .github svg {
+      transition: all 0.5s; }
+    footer .footer__content--social .mobile:hover svg {
+      fill: #08112f; }
+    footer .footer__content--social .mail:hover svg {
+      fill: #f4f4f4; }
+    footer .footer__content--social .github:hover svg {
+      fill: #000; }
+  footer .footer__copyright {
+    text-align: center; }
+    footer .footer__copyright span {
+      cursor: pointer;
+      transition: all 1s ease;
+      display: inline-block; }
+    footer .footer__copyright span:hover {
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+      transform: rotate(-5deg) scale(1.3);
+      background-color: #970e22; }
+
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -649,7 +706,7 @@ footer .modal-bg {
 
 .section-form {
   padding: 15rem 0;
-  background-image: linear-gradient(to right bottom, #1084f0, #0750af); }
+  background-image: linear-gradient(to right bottom, rgba(216, 148, 0, 0.568), rgba(116, 79, 1, 0.692)); }
   @media only screen and (max-width: 56.25em) {
     .section-form {
       padding: 10rem 0; } }
