--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import "layout/navigation";
 @import "layout/intro";
 @import "layout/old";
+@import "layout/footer";
 
 @import "pages/index.scss";
 
