--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,6 +8,10 @@ header {
     justify-content: center;
     align-items: center;
     filter: brightness(80%);
+
+    @include respond(tab-port){
+      height: 75vh;
+    }
     
     .sunrise{
       background-color: rgb(255, 187, 0);
@@ -28,13 +32,18 @@ header {
       img {
         width: 100%;
         height: 100vh;
+
+
+      @include respond(tab-port){
+        height: 75vh;
+      }
       }
 
       &.sun {
         left: -250px;
         top: -50px;
         img {
-          height: 100%;
+          height: 80%;
         }
       }
 
